Version 0.6.4
-------------
Completed transitioning to the input values for the binary version.
added print functions for all classes
updated pfdaParseFormula to retain names.
fixed names for vaiables, now handled in pfda function rather than induvidual functions.

Version 0.6.3
-------------
added nknots to pfda control, and added support to the related functions

Version 0.6.0
-------------
Reworked pfdaSingle and pfdaDual to combine together into pfda function that will also handle binary data
Major file system rework
C code is now documented in Doxygen format
Binary Single Algorithm

VERSION 0.5.10
--------------
3/21/2009 10:18 AM Forked out SplineBasis code to orthogonalsplinebasis package. 
Expanded new memory allocation specification.

VERSION 0.5.9
-------------
Fix in SplineBasis Functions to handle probelsm in knot specification.


VERSION 0.5.8
-------------
Major inner workings updates.
new C functions:
	Added for main functionality:
		pfdaDual_m4
		pfdaDual_m5
		pfdaDual_m5_1
		pfdaDual_m5_2
		pfdaDual_e
		pfdaDual_e1
		pfdaDual_e2
		pfdaDual_e2_1
		pfdaDual_e2_2
		pfdaDual_e3_1
		pfda_cond_dd
		pfda_sum_cond_dd
		pfda_cond_ab
		pfda_sum_cond_ab
	Utilities Added:
		checkdebug
		pfda_matrix_outer_quadratic_form
		pfda_matrix_inner_quadratic_form
		uppersym2full
		fillsym
		pfda_eigens
All of these functions handle their own memory/temorary variables and working space for solve and eigen value problems.
Also symetric matrices are enforced to be full matrices, although on input symetric matrices are assumed to be Upper matrices, never use compact (sp) matrices.
Documentation for individual functions are included in the function as comments.
Only necessary inputs and outputs are passed to the functions.
The debug system was overhauled.  
The new debug system requires a vector where the first position indicated the length of the debug vector, the rest are treated as boolean indicators.