@@ -1,7 +1,7 @@
 Package: pfda
 Type: Package
 Title: Paired Functional Data Analysis
-Version: 0.6.4
+Version: 0.6.5
 Date: 3/5/2010
 Author: Andrew Redd	
 Depends: orthogonalsplinebasis (>= 0.1.2), methods, utils, graphics, stats, MASS, mvbutils
