@@ -22,3 +22,4 @@ S3method(print,pfda.dual.bc)
 S3method(print,pfda.dual.cc)
 S3method(print,pfda.single.b)
 S3method(print,pfda.single.c)
+S3method(persp,pfda.additive)
